; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_sws_utils.c_free_mp_sws.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_sws_utils.c_free_mp_sws.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_sws_context = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @free_mp_sws to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_mp_sws(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.mp_sws_context*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.mp_sws_context*
  store %struct.mp_sws_context* %5, %struct.mp_sws_context** %3, align 8
  %6 = load %struct.mp_sws_context*, %struct.mp_sws_context** %3, align 8
  %7 = getelementptr inbounds %struct.mp_sws_context, %struct.mp_sws_context* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @sws_freeContext(i32 %8)
  %10 = load %struct.mp_sws_context*, %struct.mp_sws_context** %3, align 8
  %11 = getelementptr inbounds %struct.mp_sws_context, %struct.mp_sws_context* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @sws_freeFilter(i32 %12)
  %14 = load %struct.mp_sws_context*, %struct.mp_sws_context** %3, align 8
  %15 = getelementptr inbounds %struct.mp_sws_context, %struct.mp_sws_context* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @sws_freeFilter(i32 %16)
  ret void
}

declare dso_local i32 @sws_freeContext(i32) #1

declare dso_local i32 @sws_freeFilter(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
